fixed top navbar recurring problems on mobile

--- a/main-styles.css
+++ b/main-styles.css
@@ -1,3 +1,12 @@
+*{
+    font-family: inherit;
+    color: white;
+    text-align: center;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
     padding-top: 3.75rem;
@@ -27,11 +36,6 @@ main{
     flex: 1;
 }
 
-*{
-    font-family: inherit;
-    color: white;
-    text-align: center;
-}
 
 
 .top-navbar {
